erDiagram
    USERS ||--o{ TRADING_STRATEGIES : creates
    USERS ||--o{ API_KEYS : manages
    USERS ||--o{ BACKTESTS : runs
    TRADING_STRATEGIES ||--o{ BACKTESTS : "used in"
    TRADING_STRATEGIES ||--o{ TRADES : generates
    
    USERS {
        ObjectId _id PK
        string user_id UK "Supabase User ID"
        string email UK
        string first_name
        string last_name
        datetime created_at
        datetime updated_at
    }
    
    TRADING_STRATEGIES {
        ObjectId _id PK
        string user_id FK
        string name
        string description
        json config
        datetime created_at
        datetime updated_at
    }
    
    API_KEYS {
        ObjectId _id PK
        string user_id FK
        string service_name
        string api_key
        string api_secret
        boolean is_active
        datetime created_at
    }
    
    BACKTESTS {
        ObjectId _id PK
        string user_id FK
        ObjectId strategy_id FK
        string name
        datetime start_date
        datetime end_date
        float initial_capital
        float final_capital
        float profit_loss
        float max_drawdown
    }
    
    TRADES {
        ObjectId _id PK
        string user_id FK
        ObjectId strategy_id FK
        string symbol
        string direction
        float entry_price
        float exit_price
        float quantity
        datetime entry_time
        datetime exit_time
        string status
    }